refactor create user
